--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,15 @@ services:
   web:
     # Pull the Image from Repository.
     # replace username/repo:tag with your name and image details
-    image: username/repo:tag 
+    image: akmv30/friendly-hello:v1.0.1 
     # Command used to deploy the Service
     deploy:
       # Run 5 instances of that image as a service called web
       replicas: 5
       resources:
-        # Limiting each one to use, at most, 10% of a single core of CPU time and 50MB of RAM.
+        # Limiting each one to use, at most, 20% of a single core of CPU time and 50MB of RAM.
         limits:
-          cpus: "0.1"
+          cpus: "0.2"
           memory: 50M
       # Immediately restart containers if one fails.     
       restart_policy:
