--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -4,16 +4,16 @@ services:
   web:
     # Pull the Image from Repository.
     # replace username/repo:tag with your name and image details
-    image: akmv30/friendly-hello:v1.0.1
+    image: akmv30/friendly-hello:latest 
     # Command used to deploy the Service
     deploy:
       # Run 3 instances of that image as a service called web
       replicas: 3
       resources:
-        # Limiting each one to use, at most, 10% of a single core of CPU time and 50MB of RAM.
+        # Limiting each one to use, at most, 20% of a single core of CPU time and 50MB of RAM.
         limits:
-          cpus: "0.2"
-          memory: 50M
+          cpus: "0.1"
+          memory: 25M
       # Immediately restart containers if one fails.     
       restart_policy:
         condition: on-failure
